fix for nav on ios

--- a/src/components/nav/Nav.scss
+++ b/src/components/nav/Nav.scss
@@ -16,7 +16,7 @@
     .cls-1 { fill: $cyan-l; }
     &:hover {
         fill-opacity: 1;
-        
+        cursor: pointer;
     }
 }
 
